[package]
name = "kinesin-crypto"
description = "cryptography-associated helpers for kinesin"
version = "0.1.0"
edition = "2021"
authors = ["iczero <iczero@hellomouse.net>"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
