[package]
name = "kinesin-rdt"
description = "kinesin reliable data transport (WIP)"
version = "0.1.0"
edition = "2021"
authors = ["iczero <iczero@hellomouse.net>"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
crossbeam-channel = "0.5.6"
tracing = "0.1.37"
thiserror = "1.0.44"

[dev-dependencies]
color-eyre = "0.6.2"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
