[package]
name = "kinesin"
description = "kinesin re-exports crate (WIP)"
version = "0.1.1"
repository = "https://github.com/hellomouse/kinesin"
edition = "2021"
authors = ["iczero <iczero@hellomouse.net>"]
license = "MPL-2.0"

[dependencies]
kinesin-rdt = { version = "0.1.0", path = "../kinesin-rdt" }
