[package]
name = "parse-tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
etherparse = "0.13.0"
eyre = "0.6.8"
kinesin-rdt = { path = '../kinesin-rdt' }
parking_lot = "0.12.1"
tokio = { version = "1.27.0", features = ["tracing", "full"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }