[package]
name = "parse-tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
color-eyre = "0.6.2"
etherparse = "0.13.0"
eyre = "0.6.8"
kinesin-rdt = { path = '../kinesin-rdt' }
parking_lot = "0.12.1"
pcap-parser = "0.14.1"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.27.0", features = ["tracing", "full"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
