[package]
name = "parse-tcp"
description = "tcp reassembler"
version = "0.1.0"
edition = "2021"
authors = ["iczero <iczero@hellomouse.net>"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
color-eyre = "0.6.2"
crossbeam-channel = "0.5.8"
etherparse = "0.13.0"
eyre = "0.6.8"
kinesin-rdt = { path = '../kinesin-rdt' }
libc = "0.2.147"
parking_lot = "0.12.1"
# pcap-parser = "0.14.1"
# pcap-parser = { path = '../../pcap-parser' }
pcap-parser = { git = "https://github.com/iczero/pcap-parser", branch = "unexpected-eof" }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
